<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">S-CrewClientprealpha</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="HinttxtOrder">Your Order</string>
    <string name="usernamebsptxt">Your Name</string>
    <string name="ButtonText">Test It!</string>
    <string name="txtdev">Pre-Alpha developed by Sebastian Walla</string>
    <string name="txtview2">" "</string>
    <string name="update">Update</string>
    <string name="buttontxttoadminconsole">->Admin Console</string>
    <string name="adminnamehint">Admins Name</string>
    <string name="adminpwhint">Password</string>
    <string name="buttonlogintxt">Log in</string>
    <string name="txtviewbottomlogintxt"></string>
    <string name="buttonsetrestauranttxt">Set Restaurant</string>
    <string name="buttontxtgetGesamt">Get the whole Order</string>
    <string name="txtfieldrestauranthint">Restaurant</string>
    <string name="txtviewgesamtbestellung"></string>
    <string name="txtadminconsoltop">" "</string>
    <string name="sendorderbuttontxt">Send Order</string>
    <string name="buttonstuermer">Stürmer</string>
    <string name="stuermerbuttontxtdropdown">Stürmer Dropdown</string>
    <string name="promptstuermer">Choose meal</string>

</resources>
